ecmascript/parser/tests/test262-error-references/fail/f4c0cdc8d5782f3f.js.stderr
error: TS2406
 --> $DIR/tests/test262-parser/fail/f4c0cdc8d5782f3f.js:1:1
  |
1 | 3 = 4
  | ^

